# YHWP

./: CONTRIBUTING.md  LICENSE  README.md  build-and-upload.bat  build-windows.bat  package.json
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_quit.rs  commands.rs  lib.rs  main.rs  menu.rs  pdf_export.rs  recent_docs.rs  state.rs  windows.rs
apps/studio-host/: hop-overrides.ts  index.html  package.json  vite.config.ts
apps/studio-host/src/: hop-canvas-center.ts  hop-debug-button.ts  hop-hf-banner.ts  hop-resize-trigger.ts  hop-theme.ts  hop-web-welcome.ts  hop-window-show.ts  main.ts  style.css  vite-env.d.ts
scripts/: build-web-viewer.sh  update-upstream.sh
site-youngsam/: CNAME  README.md  app.js  index.html  styles.css
site-youngsam/templates/: manifest.json
site-youngsam/view/: index.html
site-youngsam/view/assets/: core-CdWhNIZN.js  dist-js-CpMb6KQB.js  dist-js-uI5v66bc.js  event-flVffrCc.js  hyperlink-dialog-ipSZ5hWO.js  index-BFnQEXEr.css  index-BJZNds1t.css  index-BSEUpaIU.js  index-BlCbtfUb.js  index-CDrzvmMZ.js  index-CFRmE3Gq.js  index-Cd-n2-SM.js  index-CiWfeyqO.css  index-Cj8PapwQ.css  index-CkxMbk1Z.js  index-Cmiy_2Bx.js  index-DCh-YEyk.js  index-DH2O3MZH.js  index-D_Ui6XlI.js  index-DpR3BIKl.js  index-DvqdNOkw.js  index-J6UKVai_.js  index-NTW5_NnR.css  index-T_KH-Ba9.js  index-VMOANyQz.js  index-WP2qp-VT.js  index-X7WLipiv.css  index-qVfQjy56.css  (+4 more)
(+22 files in other folders)
